# summer_hiking_series

./: .gitignore  CLAUDE.md  README.md  TASKS.md  index.html  pyproject.toml
2026/data/: fall_hikes.csv  master_schedule.csv  spring_hikes.csv  summer_hikes.csv  weekend_options.csv
2026/fall/: guide.md
2026/spring/: guide.md
2026/summer/: guide.md
db/: manage.py
scrapers/: auth.py  utils.py  wta.py  wta_reports.py
ui/: build.py
